nginx-ingress/demo-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    component-identifier: web
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    component-identifier: web
