nginx-ingress/demo-app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: web
spec:
  rules:
  - host: something.continuouspipe.net
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
